# am-bridge

./: .gitignore  AGENTS.md  README.md  TODO.md  am-bridge.config.json  chat.txt  pyproject.toml
.agents/agents/: am-ai-engineer.md  am-pl.md  am-planner.md  am-reviewer.md  am-tool-developer.md  reporting-artifact-explorer.md  reporting-bilingual-writer.md  reporting-navigation-auditor.md  reporting-reviewer.md  reporting-sidecar-engineer.md  reporting-structure-architect.md
artifacts/: README.md
artifacts/ai-pro-bundle/: DO_NOT_USE.md  am-bridge.config.json  bundle-manifest.json
artifacts/analysis/: README.md
artifacts/raw/: README.md
artifacts/reports/: README.md
deploy/internal-ai/: AGENTS.md  KOREAN-DELIVERY.md  OPTIONAL-COMPLETENESS-SUPPORT.md  README.md  REPORT-CONTRACT.md  WORKFLOW.md  am-bridge.config.local.example.json  bootstrap-initial-prompt.md  bundle-version.json  no-admin-runtime-prompt.md  operator-script.md  update-journal.md  (+1 more)
docs/: ai-pro-am-workflow.md  analyzer-io-spec.md  architecture.md  codex-support-orchestration.md  context.md  frontend-conversion-design.md  intermediate-model.md  mes-domain-model.md  oi-vision-component-checklist.md  platform-boundary.md  reporting-tf.md  roadmap.md  verification-strategy.md
exports/: README.md
playbooks/: legacy-analysis-checklist.md  mes-core-domain.yaml
samples/: README.md
schemas/: page-model.schema.json
scripts/: ai_pro_stage_runner.py  am_stage.ps1  export_ai_pro_bundle.py
tests/: test_cli_defaults.py  test_config.py  test_pipeline.py  test_sample_project.py  test_stage_workflow.py
(+158 files in other folders)
